crates/core/tests/proc/ty/generic_no_typeinfo.stderr
error[E0277]: the trait bound `T: TypeInfo` is not satisfied
 --> tests/proc/ty/generic_no_typeinfo.rs:5:8
  |
5 |     x: T,
  |        ^ the trait `TypeInfo` is not implemented for `T`
  |
help: consider restricting type parameter `T` with trait `TypeInfo`
  |
4 | pub struct Foo<T: interoptopus::lang::types::TypeInfo> {
  |                 +++++++++++++++++++++++++++++++++++++
