crates/core/tests/proc/ty/generic_no_typeinfo.rs
use interoptopus::ffi_type;

#[ffi_type]
pub struct Foo<T> {
    x: T,
}

#[allow(dead_code)]
fn main() {}
